common-applications/test-environment/radiaTest/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: radia-test
  name: radia-test
