common-applications/test-environment/radiaTest/nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: radia-test-nginx-service
  namespace: radia-test
spec:
  ports:
    - name: http-port-1
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: radia-test-nginx
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radia-test-nginx
  namespace: radia-test
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: radia-test-nginx
  template:
    metadata:
      labels:
        app: radia-test-nginx
    spec:
      imagePullSecrets:
      - name: huawei-swr-image-pull-secret
      containers:
      - name: radia-test-nginx
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/radia-test/nginx:dac43585cf0f27d1907e283dd29bcc609fa3b9cf
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - mountPath: /etc/nginx/conf.d
            name: configmap-nginx
        resources:
          requests:
            cpu: 4000m
            memory: 4000Mi
          limits:
            cpu: 4000m
            memory: 4000Mi
      volumes:
      - configMap:
          defaultMode: 420
          name: nginx-configmap
        name: configmap-nginx
