common-applications/test-environment/radiaTest/rabbitmq.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
  namespace: radia-test
spec:
  ports:
    - name: http-port-1
      protocol: TCP
      port: 5672
      targetPort: 5672
  selector:
    app: rabbitmq
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  namespace: radia-test
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      imagePullSecrets:
      - name: huawei-swr-image-pull-secret
      containers:
      - name: rabbitmq
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/radia-test/rabbitmq:v1.0.1
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 2000m
            memory: 2000Mi
          limits:
            cpu: 2000m
            memory: 2000Mi
