common-applications/test-environment/radiaTest/supervisor.yaml
apiVersion: v1
kind: Service
metadata:
  name: supervisor-service
  namespace: radia-test
spec:
  ports:
    - name: http-port-1
      protocol: TCP
      port: 21500
      targetPort: 21500
  selector:
    app: gunicorn
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gunicorn
  namespace: radia-test
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: gunicorn
  template:
    metadata:
      labels:
        app: gunicorn
    spec:
      imagePullSecrets:
      - name: huawei-swr-image-pull-secret
      nodeSelector:
        infra: "true"
      containers:
      - name: gunicorn
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/radia-test/gunicorn:1.1.1
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /opt/radiaTest/radiaTest-server/log
          name: log-storage
        - mountPath: /opt/radiaTest/radiaTest-server/server/static
          name: static-storage
        - mountPath: /opt/radiaTest/radiaTest-server/migrations
          name: migrations-storage
        - mountPath: /etc/radiaTest
          name: radiatest-configure
        - mountPath: /opt/radiaTest/radiaTest-server/gunicorn
          name: supervisor-script
        - mountPath: /var/lib/messengers_certifi
          name: messengers-certifi-storage
        - mountPath: /etc/radiaTest_ssl
          name: ssl-data
        - mountPath: /tmp
          name: gunicorn-share
        - mountPath: /var/radiaTest/pkglist
          name: pkglist-storage
        resources:
          requests:
            cpu: 8000m
            memory: 8000Mi
          limits:
            cpu: 8000m
            memory: 12000Mi
      volumes:
      - name: log-storage
        persistentVolumeClaim:
          claimName: cce-obs-supervisor-log
      - name: migrations-storage
        persistentVolumeClaim:
          claimName: cce-evs-migrations
      - name: static-storage
        persistentVolumeClaim:
          claimName: cce-evs-static
      - name: messengers-certifi-storage
        persistentVolumeClaim:
          claimName: cce-evs-messagers-certifi
      - name: ssl-data
        persistentVolumeClaim:
          claimName: cce-evs-radiatest-ssl
      - name: gunicorn-share
        persistentVolumeClaim:
          claimName: cce-sfs-gunicorn-share
      - name: pkglist-storage
        persistentVolumeClaim:
          claimName: pkglist-data-share-volume
      - configMap:
          defaultMode: 420
          name: supervisor-radiatest-configmap
        name: radiatest-configure
      - configMap:
          defaultMode: 420
          name: supervisor-script-configmap
        name: supervisor-script

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database-updator
  namespace: radia-test
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: database-updator
  template:
    metadata:
      labels:
        app: database-updator
    spec:
      imagePullSecrets:
      - name: huawei-swr-image-pull-secret
      containers:
      - name: database-updator
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/radia-test/database_updator:9f022b7867d8d311a28d6c0f0836cb18719ee718
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /etc/radiaTest
          name: database-updator-configure
        - mountPath: /tmp
          name: database-updator-share
        resources:
          requests:
            cpu: 2000m
            memory: 2000Mi
          limits:
            cpu: 2000m
            memory: 2000Mi
      volumes:
      - configMap:
          defaultMode: 420
          name: supervisor-radiatest-configmap
        name: database-updator-configure
      - name: database-updator-share
        persistentVolumeClaim:
          claimName: cce-sfs-gunicorn-share

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: casefile-resolver
  namespace: radia-test
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: casefile-resolver
  template:
    metadata:
      labels:
        app: casefile-resolver
    spec:
      imagePullSecrets:
      - name: huawei-swr-image-pull-secret
      containers:
      - name: casefile-resolver
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/radia-test/casefile_resolver:9f022b7867d8d311a28d6c0f0836cb18719ee718
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /etc/radiaTest
          name: casefile-resolver-configure
        - mountPath: /tmp
          name: casefile-resolver-share
        resources:
          requests:
            cpu: 2000m
            memory: 2000Mi
          limits:
            cpu: 2000m
            memory: 2000Mi
      volumes:
      - configMap:
          defaultMode: 420
          name: supervisor-radiatest-configmap
        name: casefile-resolver-configure
      - name: casefile-resolver-share
        persistentVolumeClaim:
          claimName: cce-sfs-gunicorn-share

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celerybeat
  namespace: radia-test
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: celerybeat
  template:
    metadata:
      labels:
        app: celerybeat
    spec:
      imagePullSecrets:
      - name: huawei-swr-image-pull-secret
      containers:
      - name: celerybeat
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/radia-test/celerybeat:9f022b7867d8d311a28d6c0f0836cb18719ee718
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /etc/radiaTest
          name: celerybeat-configure
        resources:
          requests:
            cpu: 1000m
            memory: 1000Mi
          limits:
            cpu: 1000m
            memory: 1000Mi
      volumes:
      - configMap:
          defaultMode: 420
          name: supervisor-radiatest-configmap
        name: celerybeat-configure

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: periodic-worker
  namespace: radia-test
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: periodic-worker
  template:
    metadata:
      labels:
        app: periodic-worker
    spec:
      imagePullSecrets:
      - name: huawei-swr-image-pull-secret
      containers:
      - name: periodic-worker
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/radia-test/periodic_worker:9f022b7867d8d311a28d6c0f0836cb18719ee718
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /etc/radiaTest
          name: periodic-worker-configure
        - mountPath: /etc/radiaTest_ssl/cacert.pem
          name: periodic-worker-secret
          subPath: cacert.pem
        - mountPath: /tmp
          name: periodic-worker-share
        resources:
          requests:
            cpu: 2000m
            memory: 2000Mi
          limits:
            cpu: 2000m
            memory: 2000Mi
      volumes:
      - configMap:
          defaultMode: 420
          name: supervisor-radiatest-configmap
        name: periodic-worker-configure
      - name: periodic-worker-share
        persistentVolumeClaim:
          claimName: cce-sfs-gunicorn-share
      - name: periodic-worker-secret
        secret:
          secretName: radia-test-secret
          defaultMode: 256

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: script-loader
  namespace: radia-test
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: script-loader
  template:
    metadata:
      labels:
        app: script-loader
    spec:
      imagePullSecrets:
      - name: huawei-swr-image-pull-secret
      containers:
      - name: script-loader
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/radia-test/scripts_loader:9f022b7867d8d311a28d6c0f0836cb18719ee718
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /etc/radiaTest
          name: script-loader-configure
        - mountPath: /tmp
          name: script-loader-share
        resources:
          requests:
            cpu: 1000m
            memory: 1500Mi
          limits:
            cpu: 1000m
            memory: 3500Mi
      volumes:
      - configMap:
          defaultMode: 420
          name: supervisor-radiatest-configmap
        name: script-loader-configure
      - name: script-loader-share
        persistentVolumeClaim:
          claimName: cce-sfs-gunicorn-share

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: root-resolver
  namespace: radia-test
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: root-resolver
  template:
    metadata:
      labels:
        app: root-resolver
    spec:
      imagePullSecrets:
      - name: huawei-swr-image-pull-secret
      containers:
      - name: root-resolver
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/radia-test/root_resolver:9f022b7867d8d311a28d6c0f0836cb18719ee718
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /etc/radiaTest
          name: root-resolver-configure
        - mountPath: /tmp
          name: root-resolver-share
        - mountPath: /var/radiaTest/pkglist
          name: pkglist-share
        resources:
          requests:
            cpu: 2000m
            memory: 2000Mi
          limits:
            cpu: 2000m
            memory: 3000Mi
      volumes:
      - configMap:
          defaultMode: 420
          name: supervisor-radiatest-configmap
        name: root-resolver-configure
      - name: root-resolver-share
        persistentVolumeClaim:
          claimName: cce-sfs-gunicorn-share
      - name: pkglist-share
        persistentVolumeClaim:
          claimName: pkglist-data-share-volume

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: issuerate-updator
  namespace: radia-test
spec:
  replicas: 0
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: issuerate-updator
  template:
    metadata:
      labels:
        app: issuerate-updator
    spec:
      imagePullSecrets:
      - name: huawei-swr-image-pull-secret
      containers:
      - name: issuerate-updator
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/radia-test/issuerate_updator:9f022b7867d8d311a28d6c0f0836cb18719ee718
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /etc/radiaTest
          name: issuerate-updator-configure
        resources:
          requests:
            cpu: 1000m
            memory: 2000Mi
          limits:
            cpu: 1000m
            memory: 2000Mi
      volumes:
      - configMap:
          defaultMode: 420
          name: supervisor-radiatest-configmap
        name: issuerate-updator-configure


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openqa-reader
  namespace: radia-test
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: openqa-reader
  template:
    metadata:
      labels:
        app: openqa-reader
    spec:
      imagePullSecrets:
      - name: huawei-swr-image-pull-secret
      containers:
      - name: openqa-reader
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/radia-test/openqa_reader:9f022b7867d8d311a28d6c0f0836cb18719ee718
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /etc/radiaTest
          name: openqa-reader-configure
        resources:
          requests:
            cpu: 2000m
            memory: 4000Mi
          limits:
            cpu: 2000m
            memory: 4000Mi
      volumes:
      - configMap:
          defaultMode: 420
          name: supervisor-radiatest-configmap
        name: openqa-reader-configure

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-flower
  namespace: radia-test
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: celery-flower
  template:
    metadata:
      labels:
        app: celery-flower
    spec:
      imagePullSecrets:
      - name: huawei-swr-image-pull-secret
      nodeSelector:
        infra: "true"
      containers:
      - name: celery-flower
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/radia-test/celery_flower:v1.0.20230612194055
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 1000m
            memory: 1000Mi
          limits:
            cpu: 1000m
            memory: 1000Mi
