common-applications/test-environment/radiaTest/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx   
  name: radia-test-ingress
  namespace: radia-test
spec:
  tls:
    - hosts:
        - radiatest.openeuler.org
      secretName: radia-test-tls
  rules:
    - host: radiatest.openeuler.org
      http:
        paths:
          - backend:
              serviceName: radia-test-nginx-service
              servicePort: 80
            path: /
